--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "element-plus": "^2.2.17",
-    "elp-form": "^1.0.0",
+    "elp-form": "1.0.2",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "vue": "^3.2.37",
