--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "elp-form": "1.0.3",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
+    "vite-svg-loader": "^3.6.0",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.5"
